# invariantaf

./: .gitignore  AGENTS.md  Makefile  README.md
.flox/: env.json
aave/: Makefile  descriptor.binpb  main.py  pyproject.toml
across/: Makefile  descriptor.binpb  go.mod  main.go  service.go  service_test.go
aevo/: Makefile  descriptor.binpb  go.mod  main.go  service.go  service_test.go
alpaca/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
alpaca/proto/: buf.gen.yaml  buf.yaml
alpaca/proto/alpaca/v1/: alpaca.proto
alpaca/src/alpaca_mcp/: service.py
alpaca/tests/: conftest.py  test_integration.py  test_service.py
alphavantage/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
alternativeme/: Makefile  descriptor.binpb  go.mod  main.go  main.py  pyproject.toml  service.go  service_test.go
arxiv/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
balldontlie/: Makefile  descriptor.binpb  main.py  pyproject.toml
beefy/: Makefile  descriptor.binpb  main.py  pyproject.toml
binance/: Makefile  descriptor.binpb  main.py  pyproject.toml
birdeye/: Makefile  descriptor.binpb  main.py  pyproject.toml
bitget/: Makefile  descriptor.binpb  main.py  pyproject.toml
bls/: Makefile  descriptor.binpb  main.py  pyproject.toml
bravesearch/: Makefile  descriptor.binpb  go.mod  main.go  main.py  pyproject.toml  service.go  service_test.go
bybit/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
bybit/proto/: buf.yaml
bybit/proto/bybit/v1/: bybit.proto
bybit/scripts/: generate_from_openapi.py
bybit/src/bybit_mcp/: __init__.py  spec_meta.py
bybit/tests/: __init__.py  conftest.py  test_integration.py  test_live.py
cocktaildb/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
coinbase/: Makefile  descriptor.binpb  go.mod  main.go  service.go  service_test.go
coingecko/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
coinglass/: Makefile  descriptor.binpb  main.py  pyproject.toml
coinmarketcal/: Makefile  descriptor.binpb  main.py  pyproject.toml
coinpaprika/: Makefile  descriptor.binpb  go.mod  main.go  main.py  pyproject.toml  service.go  service_test.go
compound/: Makefile  descriptor.binpb  main.py  pyproject.toml
cryptocompare/: Makefile  descriptor.binpb  go.mod  main.go  main.py  pyproject.toml  service.go  service_test.go
cryptocompare/proto/: buf.gen.yaml  buf.yaml
cryptocompare/proto/cryptocompare/v1/: cryptocompare.proto
cryptocompare/src/cryptocompare_mcp/: __init__.py  service.py
cryptocompare/tests/: conftest.py  test_live.py  test_service.py
cryptodotcom/: Makefile  descriptor.binpb  go.mod  main.go  main.py  pyproject.toml  service.go  service_test.go
cryptosignal/: Makefile  descriptor.binpb  go.mod  main.go  service.go  service_test.go
curve/: Makefile  descriptor.binpb  main.py  pyproject.toml
defillama/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
deribit/: Makefile  descriptor.binpb  main.py  pyproject.toml
dexscreener/: Makefile  descriptor.binpb  main.py  pyproject.toml
dockerhub/: Makefile  README.md  descriptor.binpb  go.mod  main.go  service.go  service_test.go
drift/: Makefile  descriptor.binpb  go.mod  main.go  service.go  service_test.go
dune/: Makefile  descriptor.binpb  main.py  pyproject.toml
dydx/: Makefile  descriptor.binpb  main.py  pyproject.toml
etherscan/: Makefile  descriptor.binpb  main.py  pyproject.toml
exchangerate/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
finnhub/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
footballdata/: Makefile  descriptor.binpb  main.py  pyproject.toml
fred/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
fun/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
gateio/: Makefile  descriptor.binpb  main.py  pyproject.toml
geckoterminal/: Makefile  descriptor.binpb  main.py  pyproject.toml
geminipredictions/: Makefile  go.mod  (+6 more)
hyperliquid/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
hyperliquid/proto/: buf.gen.yaml
hyperliquid/proto/hyperliquid/v1/: hyperliquid.proto
hyperliquid/src/hyperliquid_mcp/: service.py
hyperliquid/tests/: conftest.py  test_integration.py  test_live.py  test_service.py
jsonplaceholder/: Makefile  README.md  descriptor.binpb  main.py  pyproject.toml
jsonplaceholder/proto/: buf.gen.yaml
jsonplaceholder/proto/jsonplaceholder/v1/: jsonplaceholder.proto
jsonplaceholder/tests/: __init__.py  conftest.py  test_integration.py  test_live.py
marinade/: Makefile  descriptor.binpb  main.py  pyproject.toml
marinade/proto/: buf.gen.yaml
marinade/proto/marinade/v1/: marinade.proto
marinade/src/marinade_mcp/: service.py
marinade/tests/: conftest.py  test_live.py  test_service.py
twelvedata/: Makefile  descriptor.binpb  main.py  pyproject.toml
twelvedata/proto/: buf.gen.yaml  buf.yaml
twelvedata/proto/twelvedata/v1/: twelvedata.proto
twelvedata/src/twelvedata_mcp/: __init__.py  service.py
twelvedata/tests/: test_live.py
(+809 files in other folders)
